[tool.poetry]
name = "drs4-dsbs"
version = "0.1.0"
description = "Complex gain corrections for the digital sideband separation of DRS4"
authors = [
    "Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>",
    "Masato Hagimoto <hagimoto@a.phys.nagoya-u.ac.jp>",
    ]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
pandas = "^2.0"
xarray = "^2024.1"
xarray-dataclasses = "^1.8"

[tool.poetry.group.dev.dependencies]
black = "^24.4"
ipython = "^8.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
